create job API, renamed to description (migration), swagger docs
